--- a/portfolio.html
+++ b/portfolio.html
@@ -419,201 +419,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
-<!-- <div class="container">
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/technocrack.jpg"
-                alt="Laptop z włączoną stroną internetową."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Technocrack<br /><span class="portfolio-figcaption-item__span"
-                >Strona internetowa</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/graphics.jpg"
-                alt="Dwaj mężczyźni grają w koszykówkę."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Grafika New Orlean vs Golden Star<br /><span
-                class="portfolio-figcaption-item__span"
-                >Dizajn</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure margin-zero">
-            <div class="portfolio-img">
-              <img
-                src="./images/restaurant.jpg"
-                alt="Logo restauracji Seafood."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Restauracja Seafood<br /><span
-                class="portfolio-figcaption-item__span"
-                >Aplikacja</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/headphones.jpg"
-                alt="Czarne słuchawki."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Projekt Prime<br /><span class="portfolio-figcaption-item__span"
-                >Marketing</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/boxes.jpg"
-                alt="Białe i brązowe pudełko."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Projekt Boxes<br /><span class="portfolio-figcaption-item__span"
-                >Aplikacja</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure margin-zero">
-            <div class="portfolio-img">
-              <img
-                src="./images/monitor.jpg"
-                alt="Monitor firmy Apple."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Inspiration has no Borders<br /><span
-                class="portfolio-figcaption-item__span"
-                >Strona internetowa</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/book.jpg"
-                alt="Magazyn zawierający kilka zdjęć."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Magazyn Limited Edition<br /><span
-                class="portfolio-figcaption-item__span"
-                >Dizajn</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <div class="portfolio-img">
-              <img
-                src="./images/lab.jpg"
-                alt="Biała zawieszka z napisem."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Projekt LAB<br /><span class="portfolio-figcaption-item__span"
-                >Marketing</span
-              >
-            </figcaption>
-          </figure>
-          <figure class="portfolio-figure margin-zero">
-            <div class="portfolio-img">
-              <img
-                src="./images/laptop.jpg"
-                alt="Laptop z włączoną stroną internetową."
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-img__mask">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </div>
-            </div>
-            <figcaption class="portfolio-figcaption-item">
-              Growing Business<br /><span
-                class="portfolio-figcaption-item__span"
-                >Aplikacja</span
-              >
-            </figcaption>
-          </figure>
-        </div> -->
