--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,10 @@
               <a class="navigation-modal__item links">Kontakt</a>
             </nav>
             <div class="contact-modal">
-              <a class="links contact-modal__item" href="tel:+48 111 111 111">
+              <a
+                class="links contact-modal__item contact-modal__item--modifier"
+                href="tel:+48 111 111 111"
+              >
                 +48 111 111 111
               </a>
               <a
@@ -57,12 +60,10 @@
           </div>
         </div>
         <nav class="navigation">
+          <a class="navigation__item links" href="./index.html">Agencja</a>
           <a
             class="navigation__item navigation__item-active links"
-            href="./index.html"
-            >Agencja</a
-          >
-          <a class="navigation__item links" href="./portfolio.html"
+            href="./portfolio.html"
             >Portfolio</a
           >
           <a class="navigation__item links">Kontakt</a>
